--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,14 @@
 main:
   - title: "Quick-Start Guide"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+  - title: "블로그 방문하기"
+    url: https://SumiKimKorea.github.io/
+  - title: "Categories"
+    url: /categories/
+  - title: "About"
+    url: /about/
+  - title: "MFC"
+    url: /categories/MFC/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
